--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,11 @@
       "Pipeline\\": "src/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "Test\\": "test/src/"
+    }
+  },
   "require-dev": {
     "phpunit/phpunit": "^7.3",
     "kint-php/kint": "^2.2"
