--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     "test": "phpunit -c ./test/phpunit.xml"
   },
   "require": {
-    "symfony/http-foundation": "^4.1"
+    "symfony/http-foundation": "^4.1",
+    "psr/container": "^1.0"
   }
 }
